--- a/src/components/Price/price.scss
+++ b/src/components/Price/price.scss
@@ -159,8 +159,12 @@
         &:focus {
           outline: none;
         }
-        &:focus ~ label,
-        &:valid ~ label {
+        &:focus ~ label {
+          top: 4px;
+          font-size: 12px;
+          color: gray;
+        }
+        &:not(:placeholder-shown) + label {
           top: 4px;
           font-size: 12px;
           color: gray;
@@ -170,6 +174,11 @@
       &:last-child {
         grid-area: 2/1;
         grid-column-start: 2 span;
+        label {
+          &::after {
+            all: unset;
+          }
+        }
       }
     }
 
