--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -273,6 +273,25 @@ $border-gray_gradient: linear-gradient(
     }
   }
 
+  &.disabled {
+    cursor: auto;
+    opacity: 0.8;
+    color: $white-60;
+    svg {
+      opacity: 0.7;
+    }
+    &:active {
+      scale: 1;
+    }
+    @media (hover: hover) and (pointer: fine) {
+      &:hover {
+        &::after {
+          right: -50px;
+        }
+      }
+    }
+  }
+
   @include mobile() {
     border-radius: 100px;
   }
