--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -151,6 +151,16 @@ img {
   display: block;
 }
 
+input[type='number']::-webkit-outer-spin-button,
+input[type='number']::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type='number'] {
+  -moz-appearance: textfield; /* Firefox */
+}
+
 * {
   -webkit-tap-highlight-color: transparent;
 }
