--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -30,6 +30,7 @@
     overflow: hidden;
     flex-direction: column;
     height: fit-content;
+    z-index: 5;
 
     &__list {
       flex-direction: column;
@@ -125,7 +126,6 @@
     border: none;
     padding: 16px 24px;
     font-family: 'Inter-500';
-    backdrop-filter: blur(6px);
     cursor: pointer;
     width: 100%;
     height: 100%;
@@ -222,6 +222,7 @@
         background-color: $white-12;
         border-radius: 50%;
         padding: 22px 20px;
+        backdrop-filter: blur(6px);
         svg {
           position: relative;
           top: -2px;
@@ -269,21 +270,25 @@
 
     .wave {
       position: fixed;
-      top: 0;
-      right: 0;
-      width: 0px;
-      height: 0px;
+      width: 56px;
+      height: 56px;
       z-index: 5;
       top: 16px;
-      right: 16px;
+      right: 24px;
       border-radius: 50%;
-      background-color: #000d0090;
-      transition: 0.6s;
+      background-color: $white-12;
+      transition: 0.6s linear 0.05s;
 
       &.active {
         width: 100vw;
         height: 100vw;
+        background-color: #000d0090;
+        transition: 0.6s;
         scale: 5;
+      }
+
+      @include mobile {
+        right: 16px;
       }
     }
   }
