--- a/src/components/Hero/hero.scss
+++ b/src/components/Hero/hero.scss
@@ -1,9 +1,5 @@
 @use '../../styles/components.scss' as *;
 
-h1 {
-  font-size: var(--h1);
-}
-
 .hero {
   background-image: url('/assets/images/header.png');
   background-position: top right;
@@ -16,11 +12,60 @@ h1 {
   .container {
     position: relative;
   }
+
+  h1 {
+    font-size: var(--h1);
+    span {
+      font-family: 'RG';
+      opacity: 0;
+      filter: blur(10px);
+      position: relative;
+      top: 100px;
+      animation: hero__text-ani 1s ease forwards;
+
+      &:nth-child(1) {
+        animation-delay: 0.5s;
+      }
+
+      &:nth-child(3) {
+        animation-delay: 0.6s;
+      }
+
+      &:nth-child(4) {
+        animation-delay: 0.7s;
+      }
+
+      &:nth-child(6) {
+        animation-delay: 0.8s;
+      }
+
+      &:nth-child(7) {
+        animation-delay: 0.9s;
+      }
+
+      &:nth-child(8) {
+        animation-delay: 1s;
+        width: fit-content;
+        display: inline-block;
+      }
+
+      &:nth-child(9) {
+        animation-delay: 1.1s;
+        width: fit-content;
+        display: inline-block;
+      }
+    }
+  }
   p {
     font-size: var(--L);
     font-family: 'Inter-300';
     margin-top: 64px;
     line-height: 32px;
+    opacity: 0;
+    filter: blur(10px);
+    position: relative;
+    top: 100px;
+    animation: hero__text-ani 1s ease forwards 1.4s;
   }
 
   &__btn-wrapper {
@@ -34,7 +79,7 @@ h1 {
     background-color: transparent;
     border: none;
     cursor: pointer;
-    .arrow {
+    &__arrow {
       position: absolute;
       top: 50%;
       left: 50%;
@@ -42,16 +87,24 @@ h1 {
       transition: 0.3s;
     }
 
-    .text {
-      animation: hero__text-animation 15s infinite linear;
+    &__text {
+      animation: hero__btn-ani 15s infinite linear;
     }
-    @keyframes hero__text-animation {
+    @keyframes hero__btn-ani {
       from {
         rotate: 0deg;
       }
 
       to {
         rotate: 360deg;
+      }
+    }
+
+    @keyframes hero__text-ani {
+      to {
+        top: 0;
+        filter: blur(0px);
+        opacity: 1;
       }
     }
 
