--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -28,11 +28,25 @@ section {
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
   background-color: #000d00;
   color: white;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  gap: 200px;
+  @include tablet {
+    gap: 150px;
+  }
+
+  @include mobile {
+    gap: 100px;
+  }
 }
 
 body,
