--- a/src/components/CreateSite/createsite.scss
+++ b/src/components/CreateSite/createsite.scss
@@ -93,19 +93,6 @@
     }
   }
 
-  .show_on_laptop {
-    display: none;
-    // @include laptop {
-    //   display: block;
-    // }
-  }
-
-  // .hide_on_laptop {
-  //   @include laptop {
-  //     display: none;
-  //   }
-  // }
-
   &__btn {
     @include button-img;
     position: absolute;
@@ -113,6 +100,11 @@
     bottom: 50px;
     @include break(930px) {
       bottom: -100px;
+    }
+
+    @include mobile-big {
+      position: static;
+      margin: 28px auto 0;
     }
   }
 }
