--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -40,6 +40,7 @@ main {
   display: flex;
   flex-direction: column;
   gap: 200px;
+  overflow-x: hidden;
   @include tablet {
     gap: 150px;
   }
